tests/ui/consts/unstable-const-fn-in-libcore.stderr
error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/unstable-const-fn-in-libcore.rs:19:39
   |
LL |     const fn unwrap_or_else<F: ~const FnOnce() -> T>(self, f: F) -> T {
   |                                       ^^^^^^^^^^^^^

error[E0015]: cannot call non-const closure in constant functions
  --> $DIR/unstable-const-fn-in-libcore.rs:24:26
   |
LL |             Opt::None => f(),
   |                          ^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants
help: consider further restricting this bound
   |
LL |     const fn unwrap_or_else<F: ~const FnOnce() -> T + ~const std::ops::FnOnce<()>>(self, f: F) -> T {
   |                                                     +++++++++++++++++++++++++++++
help: add `#![feature(effects)]` to the crate attributes to enable
   |
LL + #![feature(effects)]
   |

error[E0493]: destructor of `F` cannot be evaluated at compile-time
  --> $DIR/unstable-const-fn-in-libcore.rs:19:60
   |
LL |     const fn unwrap_or_else<F: ~const FnOnce() -> T>(self, f: F) -> T {
   |                                                            ^ the destructor for this type cannot be evaluated in constant functions
...
LL |     }
   |     - value is dropped here

error[E0493]: destructor of `Opt<T>` cannot be evaluated at compile-time
  --> $DIR/unstable-const-fn-in-libcore.rs:19:54
   |
LL |     const fn unwrap_or_else<F: ~const FnOnce() -> T>(self, f: F) -> T {
   |                                                      ^^^^ the destructor for this type cannot be evaluated in constant functions
...
LL |     }
   |     - value is dropped here

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0015, E0493.
For more information about an error, try `rustc --explain E0015`.
